# openclaw

./: .env  .env.example  .gitignore  README.md  pyproject.toml
skills/amazon-shopper/: SKILL.md
src/: __init__.py  __main__.py  cli.py  config.py  openclaw.py
tests/: __init__.py  test_config.py  test_openclaw.py
workspace/: AGENTS.md
